--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,8 +5,12 @@
 	<meta charset="UTF-8">
 </head>
 <body>
-	<h1>Blog de OMars</h1>
-	<p>Blogs...</p>
-
+	{% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
+        </div>
+    {% endfor %}
 </body>
 </html>
